Added observability corrected swagger etc etc etc
